[gd_scene load_steps=4 format=3 uid="uid://bonktdsothgwv"]

[ext_resource type="Script" path="res://src/entity/trap/_trap.gd" id="1_2ixs0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3ayup"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mtqmn"]

[node name="trap" type="Node3D"]
script = ExtResource("1_2ixs0")

[node name="timer" type="Timer" parent="."]

[node name="timer_chance" type="Timer" parent="."]

[node name="snd" type="AudioStreamPlayer3D" parent="."]
autoplay = true

[node name="img" type="AnimatedSprite3D" parent="."]
pixel_size = 0.25
billboard = 1
shaded = true
texture_filter = 0

[node name="area3D" type="Area3D" parent="."]

[node name="collisionShape3D" type="CollisionShape3D" parent="area3D"]
shape = SubResource("SphereShape3D_3ayup")

[node name="activate_sight" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collisionShape3D" type="CollisionShape3D" parent="activate_sight"]
shape = SubResource("CylinderShape3D_mtqmn")
disabled = true

[connection signal="body_entered" from="area3D" to="." method="_on_area_3d_body_entered"]
